samples/_failures_safe/1761564965_6464fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20d19bee.c: In function ‘main’:
./samples/SAFE/__tmp_20d19bee.c:173:9: error: expected declaration or statement at end of input
  173 |         print_token_type(tokens[i].type);
      |         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_20d19bee.c:173:9: error: expected declaration or statement at end of input
